--- a/starters/gatsby-starter-hello-world/package.json
+++ b/starters/gatsby-starter-hello-world/package.json
@@ -2,6 +2,10 @@
   "name": "gatsby-starter-hello-world",
   "description": "Gatsby hello world starter",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gatsbyjs/gatsby-starter-hello-world"
+  },
   "scripts": {
     "develop": "gatsby develop",
     "start": "npm run develop",
