--- a/www/package.json
+++ b/www/package.json
@@ -89,6 +89,7 @@
     "react-modal": "^3.4.4",
     "react-typography": "^1.0.0-alpha.4",
     "rehype-react": "^3.0.3",
+    "remark-slug": "^5.1.2",
     "remove-markdown": "^0.3.0",
     "slash": "^1.0.0",
     "slugify": "^1.3.0",
